fixed-clipping-users-svg

--- a/css/style.css
+++ b/css/style.css
@@ -888,6 +888,11 @@ h5 {
   background-color: hsl(207 100% 98% / var(--tw-bg-opacity));
 }
 
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
